--- a/web/src/index.css
+++ b/web/src/index.css
@@ -11,3 +11,13 @@
 /**
  * END --- SETUP TAILWINDCSS EDIT
  */
+
+@layer components {
+  .dashboard-item {
+  @applyy flex items-center;
+  @apply border-r-4 border-gray-700;
+  @apply bg-gray-100 text-gray-700;
+  @apply px-4 py-2;
+  @apply transition-colors hover:bg-gray-300;
+  }
+}
