--- a/web/src/index.css
+++ b/web/src/index.css
@@ -16,7 +16,7 @@
   .dashboard-item {
   @applyy flex items-center;
   @apply bg-gray-100 text-gray-700;
-  @apply px-4 py-2;
+  @apply px-1 py-4 md:px-4 md:py-2;
   @apply transition-colors hover:bg-gray-300;
   }
 }
