--- a/web/src/index.css
+++ b/web/src/index.css
@@ -32,3 +32,30 @@
     @apply flex flex-row justify-center gap-1 mt-2;
   }
 }
+
+.google_translate {
+  @apply fixed pt-16 right-2 z-30;
+  .goog-logo-link{
+    display:none !important;
+   }
+  .goog-te-combo {
+  color:rgb(100 116 139);
+  border-radius:0.375rem;
+  width:6rem;
+  @media (min-width: 768px) {
+    width: 100%;
+  }
+  }
+ .goog-te-gadget{
+  color:transparent!important;
+  }
+ .VIpgJd-ZVi9od-l4eHX-hSRGPd{
+   z-index: 9724790009779!important;
+   top:0;
+   left:unset;
+   right:-5px;
+   display:none!important;
+   border-radius:50%;
+   border:2px solid gold;
+  }
+}
