use button component consitently #226

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -27,4 +27,8 @@
   .h2 {
       @apply text-lg font-semibold;
     }
+
+  .button-group {
+    @apply flex flex-row justify-center gap-1 mt-2;
+  }
 }
