style: Style (position) google translate select element per layout

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -34,17 +34,16 @@
 }
 
 .google_translate {
-  @apply fixed pt-16 right-2 z-30;
 
   .goog-logo-link{
-    display:none !important;
+    display: none !important;
    }
 
   .goog-te-combo {
     padding: 0.5rem;
-    color:rgb(100 116 139);
-    border-radius:0.375rem;
-    width:6rem;
+    color: rgb(100 116 139);
+    border-radius: 0.375rem;
+    width: 6rem;
 
     @media (min-width: 768px) {
       width: 100%;
@@ -57,11 +56,32 @@
 
   .VIpgJd-ZVi9od-l4eHX-hSRGPd{
     z-index: 9724790009779!important;
-    top:0;
-    left:unset;
-    right:-5px;
-    display:none!important;
-    border-radius:50%;
-    border:2px solid gold;
+    top: 0;
+    left: unset;
+    right: -5px;
+    display: none!important;
+    border-radius: 50%;
+    border: 2px solid gold;
+  }
+}
+
+/* blog */
+.blog-layout .google_translate  {
+  @apply fixed pt-16 right-2 bottom-auto top-0 z-30 w-40 drop-shadow;
+}
+
+/* admin */
+.admin-dashboard-layout {
+
+  & .google_translate .goog-te-gadget {
+    position: relative;
+  }
+
+  .google_translate {
+    @apply block fixed bottom-2 right-2 z-30 m-0 drop-shadow;
+  }
+
+  .google_translate .goog-te-combo {
+    @apply absolute bottom-0 right-0 my-0 w-40 ;
   }
 }
