feat: Fix logout button not being clickable
Resolves #244

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -79,7 +79,7 @@
 
 /* blog */
 .blog-layout .google_translate  {
-  @apply fixed pt-16 right-2 bottom-auto top-0 z-30 w-40 drop-shadow;
+  @apply fixed mt-16 right-2 bottom-auto top-0 z-30 w-40 drop-shadow;
 }
 
 /* admin */
