Added: Admin overview for (post) thumbs & user subscriptions (#248)
* feat: Create initial user subscriptions overview page

* feat: Improve user subscriptions display

* feat: Add initial thumbs overview

* feat: Improve display of thumbs overview

* feat: Include post thumbs into thumbs overview

* feat: Sort user subscriptions and thumbs with most recent on top

* fix: Fix user subscription api tests

* feat: Fix logout button not being clickable

Resolves #244

* fix: Fix google translate button position on mobile

Resolves #246

* fix: Fix button hover color in blog navbar

Resolves #245

* fix: Fix unit tests & many linting errors

* fix: Fix imports after moving the "Dashboard" Thumb components to the DashboardThumb folder

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -79,7 +79,11 @@
 
 /* blog */
 .blog-layout .google_translate  {
-  @apply fixed pt-16 right-2 bottom-auto top-0 z-30 w-40 drop-shadow;
+  @apply fixed mt-16 pt-2 right-2 bottom-auto top-0 z-30 w-40 drop-shadow;
+
+  .goog-te-combo {
+    @apply w-full;
+  }
 }
 
 /* admin */
