--- a/web/src/index.css
+++ b/web/src/index.css
@@ -79,10 +79,10 @@
 
 /* blog */
 .blog-layout .google_translate  {
-  @apply fixed mt-16 pt-2 right-2 bottom-auto top-0 z-30 w-40 drop-shadow;
+  @apply fixed mt-16 pt-1 right-0 bottom-auto top-0 z-30 w-36 mr-2 md:w-40 md:mr-0 drop-shadow;
 
   .goog-te-combo {
-    @apply w-full;
+    @apply w-[9rem];
   }
 }
 
